fixing z-index and div sizes mistakes

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 .logo1{
-   width: 50%;
+   width: 8%;
    margin-left: 220px;
    margin-top: -55px;
    position: fixed;
@@ -38,7 +38,7 @@ header {
 }
 
 .logo img {
-    width: 15%;
+    width: 100%;
 }
 
 .logo img:hover {
